Working build with getting command classes from file