@@ -3,6 +3,7 @@ package ru.nsu.Dyuagnov.LogoWorld.CommandFactories;
 import ru.nsu.Dyuagnov.LogoWorld.Commands.Command;
 
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Properties;
@@ -10,15 +11,17 @@ import java.util.Properties;
 public class CommandFactory {
     private final Map<String, Command> commands = new HashMap<String, Command>();
 
-    public Command create(final String commandName) throws IOException, ClassNotFoundException, IllegalAccessException, InstantiationException {
+    public Command create(final String commandName) throws IOException, ClassNotFoundException, IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         if (commands.containsKey(commandName)){
             return commands.get(commandName);
         }
         else{
             final Properties properties = new Properties();
-            properties.load(CommandFactory.class.getResourceAsStream("CommandFactory.properties"));
+            properties.load(Command.class.getResourceAsStream("CommandFactory.properties")); // расположение относительно CLASS_NAME.class.getResourceAsStrea
             Class loadedClass = Class.forName(properties.getProperty(commandName));
-            return commands.put(commandName, (Command)loadedClass.newInstance()); // newInstance() вернуло null
-       }
+            Command newCommand = (Command)loadedClass.getConstructor().newInstance();
+            commands.put(commandName, newCommand);
+            return newCommand;
+        }
     }
 }
